fix: adjust width of debt item for better visibility

--- a/src/App.css
+++ b/src/App.css
@@ -215,6 +215,6 @@
   }
 
   .debt {
-    width: 20ch;
+    width: 36ch;
   }
 }
